remove minimum stability, include guzzle

--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
         }
     },
     "require": {
-        "php": ">=5.3.9"
+        "php": ">=7.0",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "6.*",
         "phpunit/phpunit-selenium": "dev-master"
-    },
-    "minimum-stability": "dev"
+    }
 }
